# blockchain-scratch

./: Cargo.toml
bcaddr/: Cargo.toml
bcaddr/src/: lib.rs  main.rs
blockchain-core/: Cargo.toml
blockchain-core/example/: pow.rs
blockchain-core/src/: account.rs  block.rs  coin.rs  difficulty.rs  digest.rs  history.rs  ledger.rs  lib.rs  pace_maker.rs  reward.rs  signature.rs  timestamp.rs  transaction.rs  transfer.rs  transition.rs  verification.rs
blockchain-net/: Cargo.toml
blockchain-net/example/: client.rs  entrance.rs  pub.rs  publisher.rs  server.rs  service_proxy.rs  sub.rs  subscriber.rs  topic_proxy.rs
blockchain-net/src/: async_net.rs  blocking.rs  http.rs  impl_zeromq.rs  lib.rs
fullnode/: Cargo.toml
fullnode/src/: main.rs
proxy/: Cargo.toml
proxy/src/: main.rs
wallet/: Cargo.toml
wallet/src/: main.rs
