[package]
name = "bcaddr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
blockchain-core = { path = "../blockchain-core" }
bincode = "*"
clap = { version = "*", features = ["derive"] }
hex = "*"

[lib]
name = "bcaddr"
path = "./src/lib.rs"

[[bin]]
name = "bcaddr"
path = "./src/main.rs"
