[package]
name = "blockchain-core"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "pow"
path = "example/pow.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apply = "*"
arrayvec = { version = "*", features = ["serde"] }
bytes = "*"
chrono = { version = "*", features = ["serde"] }
ed25519 = "*"
ed25519-dalek = { version = "*", features = ["serde"] }
is_sorted = "*"
itertools = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_arrays = "*"
serde_json = "*"
sha2 = "*"
