[package]
name = "blockchain-core"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "pow"
path = "example/pow.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apply = "*"
arrayvec = { version = "*", features = ["serde"] }
cell = "*"
chrono = { version = "*", features = ["serde"] }
ed25519-dalek = { version = "1", features = ["serde"] }
is_sorted = "*"
itertools = "*"
rand = "0.7.0"
serde = { version = "*", features = ["derive"] }
serde_arrays = "*"
sha2 = "*"
slab_tree = "*"

[dev-dependencies]
serde_json = "*"
