[package]
name = "fullnode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
blockchain-core = { path = "../blockchain-core" }
blockchain-net = { path = "../blockchain-net" }
bcaddr = { path = "../bcaddr" }
clap = { version = "*", features = ["derive"] }
env_logger = "*"
hex = "*"
log = "*"
rand = "*"
tokio = "*"

[[bin]]
name = "bcfnode"
path = "./src/main.rs"
